--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -8,3 +8,7 @@ $fa-font-path: "../fonts/webfonts" !default;
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
 @import '~bootstrap/scss/bootstrap';
+
+   body {
+        background-color: rgb(0, 0, 0);
+    }
